--- a/jupyter/demo.ipynb
+++ b/jupyter/demo.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "231521fc-bf13-4066-8217-fe675aee8bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "e050982b-64e1-4e6e-ac86-01e3eb8a8808",
    "metadata": {},
    "outputs": [
@@ -10,49 +18,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello!\n"
+      "2025-03-12 20:09:51.594613\n"
      ]
     }
    ],
    "source": [
-    "print('Hello!')"
+    "from datetime import datetime\n",
+    "print(datetime.now())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a0701ca4-adba-4afc-996b-43288d63034a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "for n in range(1, 11):\n",
-    "    print(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffd64916-f637-46ab-8153-6689acdff9f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
